# bcz

./: Cargo.toml
bcz/: Cargo.toml
bcz/src/: bc.rs  bc_artist_directory.rs  bc_artist_page.rs  bc_release_page.rs  lib.rs
scraper/: Cargo.toml
scraper/src/: main.rs
