[package]
name = "bandcampz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcz = { path = "../bcz" }
clap = { version = "3.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = { version = "0.13" }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry", "std"] }